--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>World Cities</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="ico" type="image/x-icon" href="favicon.ico">
+  <link rel="img"  href="./assets/png-transparent-black-and-green-planet-logo-ico-world-wide-web-icon-earth-web-design-globe-environmental.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
